--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -27,6 +27,22 @@
       })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
     <!-- end hotjar -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-P1864WEF55"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-P1864WEF55');
+    </script>
+    <!-- end of google analytics -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
