--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <meta property="og:title" content="ZUUT" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.zuut.co" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/zuut-logo.jpg" />
+
+    <meta name="twitter:title" content="ZUUT" />
+    <meta name="twitter:description" content="A tool for grows" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/zuut-logo.jpg" />
+    <meta name="twitter:card" content="%PUBLIC_URL%/images/zuut-logo.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Zuut" />
