--- a/ui-new/public/index.html
+++ b/ui-new/public/index.html
@@ -21,13 +21,21 @@
     <!-- Using Local Font -->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-    <title>Minimal UI Kit</title>
-    <meta
-      name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
-    <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-    <meta name="author" content="Minimal UI Kit" />
+    <title>Zuut</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Zuut" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- social cards -->
+    <meta property="og:title" content="ZUUT" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.zuut.co" />
+    <meta property="og:image" content="https://i.ibb.co/xjyS1CZ/zuut-logo.jpg" />
+    <meta name="twitter:title" content="ZUUT" />
+    <meta name="twitter:description" content="A tool for grows" />
+    <meta name="twitter:image" content="https://i.ibb.co/xjyS1CZ/zuut-logo.jpg" />
+    <meta name="twitter:card" content="https://i.ibb.co/xjyS1CZ/zuut-logo.jpg" />
   </head>
 
   <body>
