--- a/ui-new/public/index.html
+++ b/ui-new/public/index.html
@@ -36,6 +36,23 @@
     <meta name="twitter:description" content="A tool for grows" />
     <meta name="twitter:image" content="https://i.ibb.co/xjyS1CZ/zuut-logo.jpg" />
     <meta name="twitter:card" content="https://i.ibb.co/xjyS1CZ/zuut-logo.jpg" />
+
+    <!-- Hotjar Tracking Code for https://www.zuut.co -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3185309, hjsv: 6 };
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
   </head>
 
   <body>
